--- a/client/app/navbar/navbar.component.html
+++ b/client/app/navbar/navbar.component.html
@@ -1,3 +1,10 @@
-<p>
-  navbar works!
-</p>
+<div class="navBar">
+  <i class="fa fa-cog fa-2x setting-icon"></i>
+  <i class="fa fa-user-circle fa-2x user-icon"></i>
+  <ul>
+    <li><a href="">吐槽</a></li>
+    <li><a href="">情感</a></li>
+    <li><a href="">灌水</a></li>
+    <li><a href="">表白</a></li>
+  </ul>
+</div>
