--- a/client/app/navbar/navbar.component.html
+++ b/client/app/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <div class="navBar">
   <i class="fa fa-cog fa-2x setting-icon"></i>
-  <i class="fa fa-user-circle fa-2x user-icon"></i>
+  <a href="/user"><i class="fa fa-user-circle fa-2x user-icon"></i></a>
   <ul>
     <li><a href="">吐槽</a></li>
     <li><a href="">情感</a></li>
