--- a/client/app/navbar/navbar.component.html
+++ b/client/app/navbar/navbar.component.html
@@ -1,10 +1,10 @@
 <div class="navBar">
-  <i class="fa fa-cog fa-2x setting-icon"></i>
-  <a href="/user"><i class="fa fa-user-circle fa-2x user-icon"></i></a>
+  <a routerLink="/"><i class="fa fa-cog fa-2x setting-icon"></i></a>
+  <a routerLink="/user"><i class="fa fa-user-circle fa-2x user-icon"></i></a>
   <ul>
-    <li><a href="">吐槽</a></li>
-    <li><a href="">情感</a></li>
-    <li><a href="">灌水</a></li>
-    <li><a href="">表白</a></li>
+    <li><a routerLink="/tucao">吐槽</a></li>
+    <li><a routerLink="/love">情感</a></li>
+    <li><a routerLink="/guanshui">灌水</a></li>
+    <li><a routerLink="/biaobai">表白</a></li>
   </ul>
 </div>
