--- a/client/app/post/post.component.html
+++ b/client/app/post/post.component.html
@@ -1,4 +1,5 @@
-      <div class="row" *ngFor="let post of posts">
+    <div class="postComponent">
+        <div class="row" *ngFor="let post of posts">
         <div class="col s12 m6">
           <div class="card blue-grey darken-1">
             <div class="card-content white-text">
@@ -12,3 +13,5 @@
           </div>
         </div>
       </div>
+    </div> 
+      
