--- a/client/app/components/navbar/navbar.component.html
+++ b/client/app/components/navbar/navbar.component.html
@@ -3,7 +3,7 @@
   <a routerLink="/user"><i class="fa fa-user-circle fa-2x user-icon"></i></a>
   <ul>
     <li><a routerLink="/tucao">吐槽</a></li>
-    <li><a routerLink="/love">情感</a></li>
+    <li><a routerLink="/xiaoyuan">校园</a></li>
     <li><a routerLink="/guanshui">灌水</a></li>
     <li><a routerLink="/biaobai">表白</a></li>
   </ul>
